# avr-os

./: .gitignore  .gitmodules  CMakeLists.txt  generic-gcc-avr.cmake
avr/: .cproject  .project  CMakeLists.txt  CMakeVerifyCompiler.txt
avr/avr-libstdcpp/: README.md
avr/avr-libstdcpp/include/: any  array  functional  limits  memory  new  optional  tuple  type_traits  utility
avr/avr-libstdcpp/include/backward/: binders.h
avr/avr-libstdcpp/include/bits/: move.h  (+26 more)
avr/old/: PacketFactory.cpp
avr/src/: BlockingQueue.cpp  BlockingQueue.h  CRC.h  Main.cpp  Message.cpp  Message.h  NetworkInterface.cpp  NetworkInterface.h  NetworkService.cpp  NetworkService.h  Packet.cpp  Packet.h  PacketBuilder.cpp  PacketFactory.h  README.md  SerialNetworkInterface.cpp  SerialNetworkInterface.h  USART.h
avr/src/app/: Application.cpp  Application.h  ApplicationManager.cpp  ApplicationManager.h  TempHumControl.cpp  TempHumControl.h  Test.cpp  Test.h  TimedDrying.cpp  TimedDrying.h  TimedMultiTrayDrying.cpp  TimedMultiTrayDrying.h
avr/src/apps/: BuTask.h  CountDown.h  InfiniteTask.cpp  NewTaskModel.cpp  NewTaskModel.h  PerformanceReporter.h  PiTask.h  Process.h
avr/src/collections/: Array.cpp  Array.h  BlockingQueue.cpp  BlockingQueue.h  LinkedList.h  PriorityQueue.cpp  PriorityQueue.h  StaticPriorityQueue.cpp  StaticPriorityQueue.h
avr/src/comms/: Serial.cpp  Serial.h  SerialPacket.cpp  SerialPacket.h
avr/src/console/: App.h  Console.h  ExecutableFile.cpp  Shell.cpp  Shell.h  ShellCommand.h
avr/src/dimmer/: Dimmer.cpp  Dimmer.h
avr/src/events/: EventLoop.cpp  EventLoop.h  HandlerMultiplexer.cpp  Subscriber.cpp  TaskSchedulingRequested.h
avr/src/hw/: ExternalInterrupts.h  I2C.h  Interrupts.h  Timer0.h  Timer1.h  USART.h
avr/src/input/: Dial.cpp  Dial.h  KeyPad.cpp  KeyPad.h  UserInput.cpp  UserInput.h
avr/src/lcd/: ClearDisplay.cpp  ClearDisplay.h  Command.cpp  Command.h  DisableCursor.cpp  DisableCursor.h  Display.cpp  Display.h  DisplayCommand.cpp  DisplayCommand.h  DisplayTextCommand.cpp  DisplayTextCommand.h  DrawText.cpp  DrawText.h  EnableCursor.cpp  EnableCursor.h  EnableCursorCommand.cpp  EnableCursorCommand.h
avr/src/network-interfaces/: SerialNetworkInterface.cpp  SerialNetworkInterface.h
avr/src/network-services/: Message.cpp  Message.h  NetworkServices.cpp  NetworkServices.h  PacketReceiver.h  PacketSender.h  Ping.cpp  Ping.h  Receiver.h  Sender.h  Services.h
avr/src/networking/: NetworkInterface.h  Packet.cpp  Packet.h  PacketBuilder.cpp  PacketBuilder.h  PacketReader.cpp  PacketReader.h  SerialNetworkInterface.cpp  SerialNetworkInterface.h
avr/src/pid/: PID.cpp  PID.h  PID2.h
avr/src/sensors/: BME280Report.cpp  BME280Report.h  ClimateReport.cpp  ClimateReport.h  bme280_i2c.c  bme280_i2c.h  i2cmaster.c  i2cmaster.h
avr/src/services/: AnnoyingTask.h  BuTask.h  Console.h  ConsoleLineHandler.h  InfiniteTask.cpp  InfiniteTask.h  PerformanceReporter.cpp  PerformanceReporter.h  PiTask.cpp  PiTask.h  SerialReporter.cpp  SerialReporter.h  Shell.h
avr/src/std/: CRC.cpp  Random.cpp  Random.h  String.h
avr/src/system/: Async.h  AsyncChain.cpp  AsyncChain.h  AsyncChainSchedulingRequest.cpp  AsyncChainSchedulingRequest.h  AsyncExecutor.cpp  AsyncExecutor.h  AsyncFunction.cpp  AsyncFunction.h  AsyncWait.cpp  AsyncWait.h  AsyncWaitTask.cpp  AsyncWaitTask.h  ContextSwitcher.h  Cpu.h  CpuStats.cpp  CpuStats.h  Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventHandler.cpp  EventHandler.h  EventLoop.cpp  EventLoop.h  EventPriority.h  EventType.h  ExecutableTask.h  HandlerMultiplexer.cpp  HandlerMultiplexer.h  HeapTask.h  Interrupts.h  Math.cpp  Math.h  MemoryAllocator.cpp  MemoryAllocator.h  MemoryStats.cpp  MemoryStats.h  Message.cpp  Message.h  (+26 more)
avr/src/tasks/: AsyncTaskTest.cpp  AsyncTaskTest.h  ClimateControl.cpp  ClimateControl.h  CpuStatsEvent.cpp  CpuStatsEvent.h  MemoryReport.cpp  MemoryReport.h  PeriodicCpuUsageReport.cpp  PeriodicCpuUsageReport.h  PeriodicMemoryReport.cpp  PeriodicMemoryReport.h  PeriodicPing.cpp  PeriodicPing.h  PeriodicSensorReport.cpp  PeriodicSensorReport.h  TemperatureControl.cpp  TemperatureControl.h  TemperatureControlCommand.cpp  TemperatureControlCommand.h  TemperatureControlStatus.cpp  TemperatureControlStatus.h  TimeTick.cpp  TimeTick.h
avr/src/time/: TimeTick.cpp  TimeTick.h  TimeTickData.cpp  TimeTickData.h  TimeTicker.cpp  TimeTicker.h  Timer.cpp  Timer.h  TimerState.cpp  TimerState.h
kernel/: CMakeLists.txt
kernel/include/collections/: Array.h  BlockingQueue.h  PriorityQueue.h  StaticPriorityQueue.h
kernel/include/comms/: Serial.h  USART.h
kernel/include/console/: App.h  Console.h
kernel/include/events/: EventLoop.h
kernel/include/io/: KeyPressEvent.h  Keyboard.h
kernel/include/std/: CRC.h
kernel/include/system/: HeapStack.h  MemoryAllocator.h  OS.h  PeriodicTask.h  PromiseWithReturn.h  Task.h  TaskExecPromise.h  TaskScheduler.h  TimeWaitPromise.h  WallClock.h
kernel/src/apps/: BuTask.h  InfiniteTask.cpp  InfiniteTask.h  PerformanceReporter.h  PiTask.h
kernel/src/comms/: Serial.cpp
kernel/src/console/: Shell.cpp
kernel/src/std/: CRC.cpp  CRCTable.c
kernel/src/system/: OS.cpp  Task.cpp  TaskScheduler.cpp
kernel/test/: CMakeLists.txt
kernel/test/collections/: ArrayTest.cpp  BlockingQueueTest.cpp  PriorityQueueTest.cpp
kernel/test/std/: CRCTest.cpp
kernel/test/system/: MemoryAllocatorTest.cpp
tests/: .cproject  .project  CMakeLists.txt
tests/Debug/: makefile
tests/Debug/src/: NetworkInterfaceMock.d  NetworkService_test.d  Packet_test.d  subdir.mk
tests/Release/: makefile
tests/Release/src/: subdir.mk
tests/src/: BlockingQueueTest.cpp  CRCTest.cpp  NetworkInterfaceMock.cpp  NetworkService_test.cpp  PacketBuilderTest.cpp  PacketTest.cpp  Packet_test.cpp
tests/src/collections/: ArrayTest.cpp  BlockingQueueTest.cpp  PriorityQueueTest.cpp  StaticPriorityQueueTest.cpp
tests/src/network-services/: PingTest.cpp
tests/src/networking/: PacketBuilderTest.cpp  PacketReaderTest.cpp  PacketTest.cpp
tests/src/std/: StringTest.cpp
tests/src/system/: MemoryAllocatorTest.cpp
(+103 files in other folders)
